--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -9,37 +9,62 @@
 </head>
 <body style="background-color: #ededed;">
 <div style="background-color: #337ab7; height: 50px;"></div>
+
+
 <div class="container-fluid" style="margin-top: 30px;">
 
     <div class="row col-lg-4 col-lg-offset-4" style="margin-top: 40px; background-color: #fff; padding: 20px; border: solid 1px #ddd;">
         <form autocomplete="off" action="#" th:action="@{/register}" th:object="${user}" method="post" class="form-signin" role="form">
-            <h3 class="form-signin-heading">Registration Form</h3>
+            <h3 class="form-signin-heading">Add activity (Month)</h3>
             <div class="form-group">
                 <div class="">
-                    <input type="text" th:field="*{username}" placeholder="User Name" class="form-control" />
+                    <input type="text" th:field="*{username}" placeholder="User Name" class="form-control" required/>
                 </div>
             </div>
             <div class="form-group">
                 <div class="">
-                    <input type="text" th:field="*{email}" placeholder="Email" class="form-control" />
+                    <input type="text" th:field="*{email}" placeholder="Email" class="form-control" required/>
                 </div>
             </div>
             <div class="form-group">
                 <div class="">
-                    <input type="password" th:field="*{password}" placeholder="Password" class="form-control" />
+                    <input type="password" th:field="*{password}" placeholder="Password" class="form-control" required />
                 </div>
             </div>
             <div class="form-group">
                 <div class="">
-                    <input type="text" th:field="*{society_id}" placeholder="Society_id" class="form-control" />
+<!--                    <input type="text" th:field="*{society_id}" placeholder="Society_id" class="form-control" />-->
+                    <label for="Societies">Your Society:</label>
+
+                    <select th:name="society_name" id="Societies" required>
+                        <th:block th:each="society : ${societies}">
+                            <option  th:value= "${society}" th:text="${society}"></option>
+                        </th:block>
+                    </select>
                 </div>
             </div>
+            <div class="form-group">
+                <div class="">
+                    <!--                    <input type="text" th:field="*{society_id}" placeholder="Society_id" class="form-control" />-->
+                    <label for="Managers">Society Manager:</label>
+
+                    <select th:name="manager_name" id="Managers" required>
+                        <th:block th:each="manager : ${managers}">
+                            <option  th:value= "${manager}" th:text="${manager}"></option>
+                        </th:block>
+                    </select>
+                </div>
+            </div>
+
+
 
             <div class="form-group">
                 <div class="">
                     <button type="submit" class="btn btn-primary btn-block">Register User</button>
                 </div>
             </div>
+
+
 
             <span th:utext="${successMessage}"></span>
             <div class="alert alert-success alert-dismissible col-sm-12"
@@ -51,6 +76,11 @@
                 </ul>
             </div>
         </form>
+        <div class="form-group">
+            <div class="">
+                <button class="btn btn-warning btn-block"><a href="/login">Login</a></button>
+            </div>
+        </div>
     </div>
 </div>
 </body>
