--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -4,16 +4,29 @@
     <title>Esociety</title>
     <!-- link rel="stylesheet" type="text/css" th:href="@{/css/registration.css}" /-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lemonada">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
 
-<h1>WELCOME </h1>
+<!--<h1>WELCOME </h1>-->
 
-<button><a href="/login">Login</a></button>
-<button><a href="/register">Register</a></button>
+<body style="" class="welcome">
+<div align="center">
+    <h1 style="color:#222831; font-family: Ubuntu;  font-size: 80px; margin-top:12%;margin-bottom: 3%;"><i>WELCOME</i></h1>
+    <a href="/login"><button class="btn btn-lg btn-dark " type="submit" style="margin-right: 4%;">  Login  </button></a>
+    <a href="/logout"><button class="btn btn-lg btn-dark  " type="submit">Register</button></a>
+
+</div>
+<!--</body>-->
+
+<!--<button><a href="/login">Login</a></button>-->
+<!--<button><a href="/register">Register</a></button>-->
 
 
-</body>
+<!--</body>-->
 </html>
