--- a/src/main/resources/templates/PaymentsTemp/payments.html
+++ b/src/main/resources/templates/PaymentsTemp/payments.html
@@ -3,50 +3,56 @@
 
 <head>
     <title>eSociety</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lemonada">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body>
-<h1>Welcome </h1>
-<br>
-<h1> In payments page..</h1>
-<!--<h2>Your due is <p th:text= "${totalAmount}" ></p></h2>-->
+<body style="background-color: #393e46">
+<div>
+    <div class="container" style="margin-left: 5%; margin-top: 5%;" >
+        <h2 style="color: white">Payment History</h2>
+        <table class="table table-striped table-light table-bordered table-hover">
+            <thead>
+            <tr>
+                <th scope="col">User_id</th>
+                <th scope="col">username</th>
+                <th scope="col">Amount</th>
+            </tr>
+            </thead>
+            <tbody>
+            <th:block th:each="var : ${obj}">
+                <tr>
+                    <td th:text="${var.id}">...</td>
+                    <td th:text="${var.username}">...</td>
+                    <td th:text="${var.amount}">...</td>
+                </tr>
+            </th:block>
+        </table>
+        <a href="/payments/paydue"><button class="btn btn-md btn-light  " type="submit">Due Payments</button></a>
+<!--        <a href="">due pyaments</a>-->
 
-<!--<form action="#" th:action="@{/paydue}" th:object="${payments}" method="post" class="form-signin" role="form">-->
-
-<!--    <h2>Your due is <p th:text= "${totalAmount}" ></p></h2>-->
-<!--    <input type="number" th:field="*{amount}" placeholder="Amount" />-->
-<!--    <input type="number" th:field="*{manager_id}" placeholder="Amount" />-->
-<!--    <input type="number" th:field="*{society_id}" placeholder="Amount" />-->
-<!--    <input type="number" th:field="*{user_id}" placeholder="Amount" />-->
-<!--    <button type="submit">Pay now</button>-->
-
-<!--</form>-->
-
-
-<table style="width:50%;border: 1px solid black;text-align: center;">
-    <tr>
-        <th>User_id</th>
-        <th>User_name</th>
-        <th>Amount</th>
-    </tr>
-    <th:block th:each="var : ${obj}">
-        <tr>
-            <td th:text="${var.id}">...</td>
-            <td th:text="${var.username}">...</td>
-            <td th:text="${var.amount}">...</td>
-        </tr>
-
-    </th:block>
-    
-</table>
-
-
-<a href="/payments/paydue">due pyaments</a>
-<!--<h1><td th:text="${x}">...</td></h1>-->
-
-<a href="/reports">Reports</a>
-
+    </div>
+</div>
 </body>
 </html>
+
+
+<!--<table style="width:50%;border: 1px solid black;text-align: center;">-->
+<!--    <tr>-->
+<!--        <th>User_id</th>-->
+<!--        <th>User_name</th>-->
+<!--        <th>Amount</th>-->
+<!--    </tr>-->
+<!--    <th:block th:each="var : ${obj}">-->
+<!--        <tr>-->
+<!--            <td th:text="${var.id}">...</td>-->
+<!--            <td th:text="${var.username}">...</td>-->
+<!--            <td th:text="${var.amount}">...</td>-->
+<!--        </tr>-->
+
+<!--    </th:block>-->
+<!--    -->
+<!--</table>-->
