--- a/src/main/resources/templates/ReportsTemplates/unpaidPayments.html
+++ b/src/main/resources/templates/ReportsTemplates/unpaidPayments.html
@@ -1,30 +1,60 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:>
 
 <head>
     <title>eSociety</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lemonada">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body>
-<h1>hEYYYYY</h1>
+<body style="background-color: #393e46">
+
 <!--<h1 th:text="${unpaid_obj}"> </h1>-->
+<div>
+    <div class="container" style="margin-left: 5%; margin-top: 5%;" >
+        <h2 style="color: white">Unpaid-payments</h2>
+        <table class="table table-striped table-light table-bordered table-hover">
+            <thead>
+            <tr>
+                <th scope="col">User id</th>
+                <th scope="col">user name</th>
+                <th scope="col">E-mail Id</th>
+            </tr>
+            </thead>
+            <tbody>
+            <th:block th:each="var : ${unpaid_obj}">
+                <tr>
+                    <td th:text="${var.id}">...</td>
+                    <td th:text="${var.username}">...</td>
+                    <td th:text="${var.email}">...</td>
+                </tr>
+            </th:block>
+        </table>
 
-<table style="width:50%;border: 1px solid black;text-align: center;">
-    <tr>
-        <th>User_id</th>
-        <th>User_name</th>
-        <th>Email id</th>
-    </tr>
-    <th:block th:each="var : ${unpaid_obj}">
-        <tr>
-            <td th:text="${var.id}">...</td>
-            <td th:text="${var.username}">...</td>
-            <td th:text="${var.email}">...</td>
-        </tr>
+    </div>
 
-    </th:block>
-</table>
+</div>
 </body>
 </html>
+
+
+
+
+<!--    <table style="width:50%;border: 1px solid black;text-align: center;">-->
+<!--        <tr>-->
+<!--            <th>User_id</th>-->
+<!--            <th>User_name</th>-->
+<!--            <th>Email id</th>-->
+<!--        </tr>-->
+<!--        <th:block th:each="var : ${unpaid_obj}">-->
+<!--            <tr>-->
+<!--                <td th:text="${var.id}">...</td>-->
+<!--                <td th:text="${var.username}">...</td>-->
+<!--                <td th:text="${var.email}">...</td>-->
+<!--            </tr>-->
+
+<!--        </th:block>-->
+<!--    </table>-->
