--- a/src/main/resources/templates/ReportsTemplates/yreports.html
+++ b/src/main/resources/templates/ReportsTemplates/yreports.html
@@ -3,34 +3,96 @@
 
 <head>
     <title>eSociety</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lemonada">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body>
-<h1>Welcome </h1>
-<br>
-<h1> In year_rep page..</h1>
+<body style="background-color: #393e46">
+<!--<br  >-->
 
-<!--<%&#45;&#45;${year}&#45;&#45;%>-->
-<h2>Year wise payment history</h2>
-
-
-    <table style="width:50%;border: 1px solid black;text-align: center;">
-        <tr>
-            <th>User_name</th>
-            <th>Amount</th>
-            <th>Transaction date</th>
-        </tr>
-        <th:block th:each="var : ${year}">
+<div>
+    <div class="container" style="margin-left: 5%; margin-top: 5%;" >
+        <h2 style="color: white">Year-wise payment history</h2>
+        <table class="table table-striped table-light table-bordered table-hover">
+            <thead>
+            <tr>
+                <th scope="col">User_name</th>
+                <th scope="col">Amount</th>
+                <th scope="col">Transaction date</th>
+            </tr>
+            </thead>
+            <tbody>
+            <th:block th:each="var : ${year}">
             <tr>
                 <td th:text="${var.username}">...</td>
                 <td th:text="${var.amount}">...</td>
                 <td th:text="${var.paid_at}">...</td>
             </tr>
-        </th:block>
-    </table>
+            </th:block>
+        </table>
 
+
+</div>
+</div>
 
 </body>
 </html>
+<!--<h1> Year-wise Reports</h1>-->
+
+<!--&lt;!&ndash;<%&#45;&#45;${year}&#45;&#45;%>&ndash;&gt;-->
+<!--<h2>Year-wise payment history</h2>-->
+
+<!--    <table style="width:50%;border: 1px solid black;text-align: center;">-->
+<!--        <tr>-->
+<!--            <th>User_name</th>-->
+<!--            <th>Amount</th>-->
+<!--            <th>Transaction date</th>-->
+<!--        </tr>-->
+<!--        <th:block th:each="var : ${year}">-->
+<!--            <tr>-->
+<!--                <td th:text="${var.username}">...</td>-->
+<!--                <td th:text="${var.amount}">...</td>-->
+<!--                <td th:text="${var.paid_at}">...</td>-->
+<!--            </tr>-->
+<!--        </th:block>-->
+<!--    </table>-->
+
+
+
+
+
+
+<!--<div class="container" style="margin-left: 5%; margin-top: 5%;" >-->
+<!--    <table class="table table-striped table-light table-bordered table-hover">-->
+<!--        <thead>-->
+<!--        <tr>-->
+<!--            <th scope="col">User_id</th>-->
+<!--            <th scope="col">User_name</th>-->
+<!--            <th scope="col">Amount</th>-->
+<!--        </tr>-->
+<!--        </thead>-->
+<!--        <tbody>-->
+<!--        <tr>-->
+<!--            <th scope="row">1</th>-->
+<!--            <td>abc</td>-->
+<!--            <td>123</td>-->
+<!--        </tr>-->
+<!--        <tr>-->
+<!--            <th scope="row">2</th>-->
+<!--            <td>prq</td>-->
+<!--            <td>456</td>-->
+<!--        </tr>-->
+<!--        <tr>-->
+<!--            <th scope="row">3</th>-->
+<!--            <td>xyz</td>-->
+<!--            <td>789</td>-->
+<!--        </tr>-->
+<!--        </tbody>-->
+<!--    </table>-->
+<!--    <form action="#">-->
+<!--        <button class="btn btn-lg btn-light  " type="submit" style="margin-top:5%;">due payments reports</button>-->
+<!--    </form>-->
+<!--</div>-->
