--- a/src/main/resources/templates/addManager.html
+++ b/src/main/resources/templates/addManager.html
@@ -1,62 +1,62 @@
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>Registration Form</title>
-    <!-- link rel="stylesheet" type="text/css" th:href="@{/css/registration.css}" /-->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body style="background-color: #ededed;">
-<div style="background-color: #337ab7; height: 50px;"></div>
-<div class="container-fluid" style="margin-top: 30px;">
+<!--<!DOCTYPE html>-->
+<!--<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">-->
+<!--<head>-->
+<!--    <title>Registration Form</title>-->
+<!--    &lt;!&ndash; link rel="stylesheet" type="text/css" th:href="@{/css/registration.css}" /&ndash;&gt;-->
+<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>-->
+<!--    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+<!--</head>-->
+<!--<body style="background-color: #ededed;">-->
+<!--<div style="background-color: #337ab7; height: 50px;"></div>-->
+<!--<div class="container-fluid" style="margin-top: 30px;">-->
 
-    <div class="row col-lg-4 col-lg-offset-4" style="margin-top: 40px; background-color: #fff; padding: 20px; border: solid 1px #ddd;">
-        <form autocomplete="off" action="#" th:action="@{/addmanager}" th:object="${user}" method="post" class="form-signin" role="form">
-            <h3 class="form-signin-heading">Add manager Form</h3>
-            <div class="form-group">
-                <div class="">
-                    <input type="text" th:field="*{username}" placeholder="User Name" class="form-control" />
-                </div>
-            </div>
-
-            <div class="form-group">
-                <div class="">
-                    <input type="text" th:field="*{email}" placeholder="Email" class="form-control" />
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="">
-                    <input type="password" th:field="*{password}" placeholder="Password" class="form-control" />
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="">
-                    <input type="text" th:field="*{society_id}" placeholder="Society_id" class="form-control" />
-                </div>
-            </div>
-
-
-
-            <div class="form-group">
+<!--    <div class="row col-lg-4 col-lg-offset-4" style="margin-top: 40px; background-color: #fff; padding: 20px; border: solid 1px #ddd;">-->
+<!--        <form autocomplete="off" action="#" th:action="@{/addmanager}" th:object="${user}" method="post" class="form-signin" role="form">-->
+<!--            <h3 class="form-signin-heading">Add manager Form</h3>-->
+<!--            <div class="form-group">-->
 <!--                <div class="">-->
-<!--                    <input type="radio" id="admin" th:field="*{role}" class="form-control" name="role" value="Admin" >-->
-<!--                    <label for="admin">Admin</label><br>-->
-<!--                    <input type="radio" id="manager" th:field="*{role}" class="form-control" name="role" value="Manager">-->
-<!--                    <label for="manager">Manager</label><br>-->
-                    <input type="text" th:field="*{role}" placeholder="role" class="form-control" />
-                </div>
-            </div>
+<!--                    <input type="text" th:field="*{username}" placeholder="User Name" class="form-control" />-->
+<!--                </div>-->
+<!--            </div>-->
 
-            <div class="form-group">
-                <div class="">
-                    <button type="submit" class="btn btn-primary btn-block">Register User</button>
-                </div>
-            </div>
+<!--            <div class="form-group">-->
+<!--                <div class="">-->
+<!--                    <input type="text" th:field="*{email}" placeholder="Email" class="form-control" />-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="form-group">-->
+<!--                <div class="">-->
+<!--                    <input type="password" th:field="*{password}" placeholder="Password" class="form-control" />-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="form-group">-->
+<!--                <div class="">-->
+<!--                    <input type="text" th:field="*{society_id}" placeholder="Society_id" class="form-control" />-->
+<!--                </div>-->
+<!--            </div>-->
 
 
-        </form>
-    </div>
-</div>
-</body>
-</html>
+
+<!--            <div class="form-group">-->
+<!--&lt;!&ndash;                <div class="">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <input type="radio" id="admin" th:field="*{role}" class="form-control" name="role" value="Admin" >&ndash;&gt;-->
+<!--&lt;!&ndash;                    <label for="admin">Admin</label><br>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <input type="radio" id="manager" th:field="*{role}" class="form-control" name="role" value="Manager">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <label for="manager">Manager</label><br>&ndash;&gt;-->
+<!--                    <input type="text" th:field="*{role}" placeholder="role" class="form-control" />-->
+<!--                </div>-->
+<!--            </div>-->
+
+<!--            <div class="form-group">-->
+<!--                <div class="">-->
+<!--                    <button type="submit" class="btn btn-primary btn-block">Register User</button>-->
+<!--                </div>-->
+<!--            </div>-->
+
+
+<!--        </form>-->
+<!--    </div>-->
+<!--</div>-->
+<!--</body>-->
+<!--</html>-->
