--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,36 +4,57 @@
 <head>
     <title>home</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lemonada">
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body>
-<h1>Welcome </h1>
-<br>
-<div sec:authorize="hasAnyAuthority('ADMIN','MANAGER')">
 
-    <a href="/addmonthlyactivity">Add monthly Activity</a>
-    <a href="/addyearlyactivity">Add yearly Activity</a>
-    <a href="/reports">Reports</a>
+<body style="background-color: #393e46" class="home">
+<div align="center">
+    <h1 style="color:#222831; font-family: Ubuntu; color: white; font-size: 80px; margin-top:12%;margin-bottom: 3%;">WELCOME <span sec:authentication="name">Username</span></h1>
+    <div sec:authorize="hasAnyAuthority('ADMIN','MANAGER')">
+
+        <table  style="width:100% ;margin-left: auto;margin-right: auto;">
+            <tr><th><a href="/addmonthlyactivity">Add monthly Activity</a></th></tr>
+            <tr> <th><a href="/addyearlyactivity">Add yearly Activity</a> </th> </tr>
+            <tr> <th><a href="/reports">Reports</a> </th> </tr>
+        </table>
+    </div>
+
+    <div sec:authorize="hasAnyAuthority('ADMIN')">
+        <table style="width:100%">
+            <tr><th><a href="/addsociety">Add Society</a></th></tr>
+            <tr> <th><a href="/addmanagernew">Add Manager</a> </th> </tr>
+        </table>
+    </div>
+
+    <div sec:authorize="hasAnyAuthority('ADMIN','MANAGER','USER')">
+        <table style="width:100%">
+            <tr><th><a href="/payments">Payments</a></th></tr>
+            <tr> <th>
+                <form action="/logout">
+                    <button type="submit">logout</button>
+                </form>
+            </th> </tr>
+        </table>
+    </div>
+    <a href="/payments"></a>
+
 </div>
+</body>
 
-<div sec:authorize="hasAnyAuthority('ADMIN')">
-    <a href="/addsociety">Add Society</a>
-    <a href="/addmanager">Add Manager</a>
-</div>
-<a href="/payments">Payments</a>
-
-<form action="/logout">
-
-    <button type="submit">logout</button>
-
-</form>
+<!--<body>-->
+<!--<h1>Welcome </h1>-->
+<!--<br>-->
 
 <!--<a href="/paymenthistory">Payment History</a>-->
 <!--<a href="/reports">Reports</a>-->
 <!--<a href="/all">Users</a>-->
-<!--<%&#45;&#45;hey!its working.. yo your are -&#45;&#45; > &#45;&#45;%>-->
-<!--<%&#45;&#45;<form action="home" ></form>&#45;&#45;%>-->
+<!--<%--hey!its working.. yo your are --- > --%>-->
+<!--<%--<form action="home" ></form>--%>-->
 
-</body>
+<!--</body>-->
 </html>
