--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -43,18 +43,18 @@
                     </select>
                 </div>
             </div>
-            <div class="form-group">
-                <div class="">
-                    <!--                    <input type="text" th:field="*{society_id}" placeholder="Society_id" class="form-control" />-->
-                    <label for="Managers">Society Manager:</label>
+<!--            <div class="form-group">-->
+<!--                <div class="">-->
+<!--                    &lt;!&ndash;                    <input type="text" th:field="*{society_id}" placeholder="Society_id" class="form-control" />&ndash;&gt;-->
+<!--                    <label for="Managers">Society Manager:</label>-->
 
-                    <select th:name="manager_name" id="Managers" required>
-                        <th:block th:each="manager : ${managers}">
-                            <option  th:value= "${manager}" th:text="${manager}"></option>
-                        </th:block>
-                    </select>
-                </div>
-            </div>
+<!--                    <select th:name="manager_name" id="Managers" required>-->
+<!--                        <th:block th:each="manager : ${managers}">-->
+<!--                            <option  th:value= "${manager}" th:text="${manager}"></option>-->
+<!--                        </th:block>-->
+<!--                    </select>-->
+<!--                </div>-->
+<!--            </div>-->
 
 
 
